--- a/dzjkm2.html
+++ b/dzjkm2.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 				<script>
-								var uname1="王昊天";
-								var uname2=" **天";
-								var uid1="370883198803107210";
-								var uid2="3708**********10";
+								var uname1="张海龙";
+								var uname2=" **龙";
+								var uid1="370883198807284417";
+								var uid2="3708**********17";
 								
 								function fun1(v)
 								{
