--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <a href="dzjkm.html">小白熊</a><br /><br /><br />
-<a href="dzjkm.html">大黑熊</a>
+<a href="dzjkm2.html">大黑熊</a>
 </body>
 </html>
