--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 				<meta charset="UTF-8">
 				<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 				<title>HotineStudio2021</title>
 </head>
 <body>
-<a href="dzjkm.html">小白熊</a><br /><br /><br /><br />
+				<script>
+								
+				</script>
+				<style>
+								body{background-color:#000000;color:#ffffff;font-size:14px;font-family:"Droid Sans"}
+								a{color:#dddddd;text-decoration:none;}
+								.center{text-align:center}
+				</style>
+				<div style="font-weight:bold;font-size:80px;">FOLLOW<br />THE<br/>WHITE<br/>RABBIT</div>
+				<br/><br/><br/><br/><br/><br/>
+				<div style="font-size:16px;color:#eeeeee">
+								免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免<a href="http://www.hotine.org">兔</a>免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免免...
+				</div>
+				<br/><br/><br/><br/><br/><br/>
+				<div style="font-weight:bold;font-size:18px;display:none;">
+								<a href="dzjkm.html">ICEBEAR</a>&nbsp|&nbsp
+								<a href="dzjkm2.html">GRIZEE</a>
+				</div>
 </body>
 </html>
