--- a/index.html
+++ b/index.html
@@ -20,46 +20,46 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>FOLLOW THE WHITE RABBIT</h1>
+							<h1>HOTINE的小站</h1>
 							<p class="major">2021.9.9<br />再次上线了我的个人主页：）</p>
 							<ul class="actions stacked">
 								<li><a href="#scrollpoint" class="button big wide smooth-scroll-middle">开始</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/20210910-1.jpg" alt="" />
 						</div>
 					</section>
 
-				<!-- Two 
+				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Magna etiam feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions stacked">
+							<h2>比日食/月食还罕见的彩虹</h2>
+							<p>今年夏天竟然出现了两次</p>
+							<!--ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
+							</ul-->
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/20210910-4.jpg" alt="" />
 						</div>
 					</section>
 
-				-->
-				<!-- Three 
+				
+				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions stacked">
+							<h2>春天，孟府的流苏</h2>
+							<p>一如既往的美</p>
+							<!--ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
+							</ul-->
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/20210910-3.jpg" alt="" />
 						</div>
 					</section>
-					-->
+					
 
 				<!-- Four 
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
