--- a/matrix.html
+++ b/matrix.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html lang="en"> 
 		<head> 
-				<meta charset="UTF-8"> 
+				<meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 				<title>MATRIX</title> 
 				<style> 
 						*{ margin: 0; padding: 0; } 
