--- a/jkm/a.html
+++ b/jkm/a.html
@@ -83,7 +83,7 @@
 								</div>
 								
 								<div id="userid" style="font-size:18px;font-weight:bold;clear:both;"></div>
-								<div style="font-size:14px;width:320px;margin:auto;padding:7px;font-weight:bold;border:1.3px solid #eeeeee;text-align:left;">近14天您途径过:山东省济宁市</div>
+								<div style="font-size:14px;width:320px;margin:auto;padding:7px;font-weight:bold;border:1.3px solid #eeeeee;text-align:left;">近14天您途径过:山东省青岛市</div>
 								<br/>
 				</div>
 				<!-- 链接处 -->
