--- a/page20210917tsingtao-2.html
+++ b/page20210917tsingtao-2.html
@@ -72,8 +72,17 @@
 								<span class="image fit"><img src="images/20210917tsingtao/16.jpg" alt="" /></span>
 								<p>	
 										&nbsp;&nbsp;&nbsp;&nbsp;逛完了小青岛，原路返程，不知不觉来到了位于鱼山路和大学路交叉口的网红墙--一个普普通通马路牙子上的红墙角。本来是不屑加入那帮跟风拍照的"俗"人之中的，但近看之后发现，在特定的角度拍摄，确实还挺上相，最终还是"俗"了一把。嘿，还真好看...
-										<br />&nbsp;&nbsp;&nbsp;&nbsp;接下来又顺道溜到龙江路多洛洛主题屋，也是个网红景点，老房子配上爬墙虎和蓝天白云，颇有宫崎骏的画风，也是婚纱摄影的圣地。不过有一幢网小楼的爬山虎死了大半，反而有些阴森恐怖，像极了咒怨里的凶宅。
-										<br />&nbsp;&nbsp;&nbsp;&nbsp;在龙江路边的野生小饭店进午餐后，继续前行，来到了青岛基督教堂。冷冷清清也没什么可看的，关键是还收费。里面正在在施工，脚手架还挡住了部分建筑。一个教堂竟然还收费，本着不花冤枉钱的精神，又绕行至天主教堂，对于步行来说，真远。天主教堂就是青岛城市名片上那个有两个角角的哥特式教堂。免费，还比较良心。比基督教堂要宏伟一些，拍婚纱照的圣地。观赏性有一些，可玩性没有。
+								</p>
+								<div class="box alt">
+										<div class="row gtr-50 gtr-uniform">
+											<div class="col-6"><span class="image fit"><img src="images/20210917tsingtao/25.jpg" alt="" /></span></div>
+											<div class="col-6"><span class="image fit"><img src="images/20210917tsingtao/26.jpg" alt="" /></span></div>
+										</div>
+								</div>
+								<p>
+										&nbsp;&nbsp;&nbsp;&nbsp;接下来又顺道溜到龙江路多洛洛主题屋，也是个网红景点，老房子配上爬墙虎和蓝天白云，颇有宫崎骏的画风，也是婚纱摄影的圣地。不过有一幢网小楼的爬山虎死了大半，反而有些阴森恐怖，像极了咒怨里的凶宅。<span class="image fit"><img src="images/20210917tsingtao/27.jpg" alt="" /></span>
+										<span class="image right"><img src="images/20210917tsingtao/28.jpg" alt="" /></span>
+										&nbsp;&nbsp;&nbsp;&nbsp;在龙江路边的野生小饭店进午餐后，继续前行，来到了青岛基督教堂。冷冷清清也没什么可看的，关键是还收费。里面正在在施工，脚手架还挡住了部分建筑。没什么好看的，网上搜一下看看即可。一个教堂竟然还收费，本着不花冤枉钱的精神，又绕行至天主教堂，对于步行来说，真远。天主教堂就是青岛城市名片上那个有两个角角的哥特式教堂，如图。免费，还比较良心。比基督教堂要宏伟一些，拍婚纱照的圣地。观赏性有一些，可玩性没有。
 										<br />&nbsp;&nbsp;&nbsp;&nbsp;随后又步行到了中山路，没有什么好看的，正准备返程，又想到有个网红景点叫"解忧杂货铺"就在附近的曲阜路上，然后，就来到了本次青岛之旅最坑景点。本以为周边会是个步行街之类的，杂货铺怎么也得一百个平以上的各类纪念品商店吧，结果步行很远到了才发现只是个两间小屋卖义乌小商品杂货的小店，腿都快断了。
 										<br />&nbsp;&nbsp;&nbsp;&nbsp;下午回宾馆休息片刻后，又打车前往很远的小麦岛，本想在岛上拍个日落，结果一首凉凉送给自己--因台风原因景区关闭，呵呵。之后又是打车又是地铁外加步行，吃了人生中最劲爆的海鲜自助，只要110，各种海鲜贝类、虾、章鱼、海鱼随便吃，吃到再也不想吃为止。晚上地铁中转顺道看了下五四广场，真没啥看头，就是个海边广场，观赏性和可玩性都不高，不晓得为什么会有人觉得来青岛必须逛五四广场。一天下来走了23131步。
 										<br />&nbsp;&nbsp;&nbsp;&nbsp;<b>第三天</b>订了海昌极地世界的票，三馆+5D剧场，249元，比青岛海底世界150元的价位贵了100元。停车费10元每小时，隐隐的心痛。进去参观才发现，海昌极地是妥妥的黑店啊。水族箱少不说，还没看到鱼，先安排一堆纪念品店和食品店。与其说是海底世界，不如说是海底主题的步行街。鱼的数量少、颜色暗淡、设备陈旧，处处无惊喜。整体逛下来有种被坑的感觉。被蓬莱海底世界、日照海洋世界、青岛海底世界远远的甩开好几条街。去了才告知5D剧场不开放，不能退钱，只能改成冰雪世界。所谓的冰雪世界其实只是个300平米的大冷库，里面有些冰雕，租羽绒服需要额外交20元，成功又被骗了20块钱。全部玩完，停车费60元，哎。
