--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">主页</a></li>
-							<li><a href="page20210917tsingtao.html">初秋的青岛之行</a></li>
-							<li><a href="page20210917tsingtao.html">施工中...</a></li>
+							<li><a href="page20210917tsingtao-1.html">初秋的青岛之行</a></li>
+							<li><a href="page20210917tsingtao-1.html">施工中...</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -61,7 +61,7 @@
 								</header>
 								<img class="image main" src="images/20210917tsingtao/title.jpg" alt="" />
 								<ul class="actions special">
-									<li><a href="page20210917tsingtao.html" class="button large">完整故事</a></li>
+									<li><a href="page20210917tsingtao-1.html" class="button large">完整故事</a></li>
 								</ul>
 							</article>
 
