--- a/page20210917tsingtao-1.html
+++ b/page20210917tsingtao-1.html
@@ -26,8 +26,9 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">主页</a></li>
-							<!--li class="active"><a href="#">初秋的青岛之行</a></li-->
-							<!--li><a href="elements.html">Elements Reference</a></li-->
+							<li class="active"><a href="page20210917tsingtao-1.html">初秋的青岛之行第一日</a></li>
+							<li><a href="page20210917tsingtao-2.html">第二日</a></li>
+							<li><a href="page20210917tsingtao-3.html">第三、四日</a></li>
 						</ul>
 						<!--ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
