--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">主页</a></li>
 							<li><a href="page20210917tsingtao-1.html">初秋的青岛之行</a></li>
-							<li><a href="page20210917tsingtao-1.html">施工中...</a></li>
+							<!--li><a href="page20210917tsingtao-1.html">施工中...</a></li-->
 						</ul>
-						<ul class="icons">
+						<!--ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
+						</ul-->
 					</nav>
 
 				<!-- Main -->
@@ -146,13 +146,13 @@
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
 									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
+									<!--a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
 									<a href="#" class="page">8</a>
 									<a href="#" class="page">9</a>
 									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
+									<a href="#" class="next">Next</a-->
 								</div>
 							</footer>
 
@@ -160,7 +160,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!--section>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -204,7 +204,7 @@
 									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
-						</section>
+						</section-->
 					</footer>
 
 				<!-- Copyright -->
