--- a/r/index.html
+++ b/r/index.html
@@ -7,11 +7,13 @@
 <style type="text/css">
 body{
 	background-color:#eeeeee;
+	
 }
 div{
 	margin:0px;
 	padding:0px;
 	border:0px;
+	font-family:inherit,"微软雅黑", serif;
 }
 .evrday{
 	width:58px;
