--- a/r/index.html
+++ b/r/index.html
@@ -16,7 +16,7 @@ div{
 	font-family:inherit,"微软雅黑", serif;
 }
 .evrday{
-	width:58px;
+	width:53px;
 	height:40px;
 	line-height:40px;
 	float:left;
@@ -24,7 +24,7 @@ div{
 	border:1px solid #fafafa;
 	}
 .evrday1{
-	width:60px;
+	width:55px;
 	height:40px;
 	line-height:40px;
 	float:left;
@@ -33,7 +33,7 @@ div{
 	
 	}
 #calendar{
-	width:420px;
+	width:385px;
 	margin:auto;
 	text-align:center;
 	background-color:#ffffff;
@@ -60,12 +60,15 @@ div{
 }
 .evrday-day1{
 	background-image:"1.png";
+	background-position:center center;
 }
 .evrday-day2{
 	background-image:"2.png";
+	background-position:center center;
 }
 .evrday-day3{
 	background-image:"3.png";
+	background-position:center center;
 }
 
 
