--- a/r/index.html
+++ b/r/index.html
@@ -13,7 +13,7 @@ div{
 	margin:0px;
 	padding:0px;
 	border:0px;
-	font-family:inherit,"微软雅黑", serif;
+	font-family:"Droid Sans","微软雅黑", serif;
 }
 .evrday{
 	width:53px;
