--- a/r/index.html
+++ b/r/index.html
@@ -5,15 +5,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 <title>ฅʕ•ᴥ•ʔ日历</title>
 <style type="text/css">
+*{
+	font-family:inherit,"Droid Sans","微软雅黑", serif;
+}
+
+
 body{
 	background-color:#eeeeee;
-	font-family:"Droid Sans","微软雅黑", serif;
 }
 div{
 	margin:0px;
 	padding:0px;
 	border:0px;
-	font-family:"Droid Sans","微软雅黑", serif;
 }
 .evrday{
 	width:53px;
