--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">2021年10月8日</span>
+										<h2><a href="page20211008fireworks.html">国庆节的<br />
+										烟火</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="page20211008fireworks.html" class="image fit"><img src="images/20211008.jpg" alt="" /></a>
+									<p>国庆节，风清气爽，在孟子湖商业水街看烟火。</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="page20211008fireworks.html" class="button">完整故事</a></li>
 									</ul>
 								</article>
 								<article>
