--- a/page20211008fireworks.html
+++ b/page20211008fireworks.html
@@ -48,7 +48,9 @@
 										国庆节，风清气爽，在孟子湖商业水街看烟火。
 									</p>
 								</header>
-								<iframe src="//player.bilibili.com/player.html?aid=805839794&bvid=BV1W34y1U7AW&cid=418712119&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+								<!--div class="image main"><img src="images/20211008.jpg" alt="https://www.bilibili.com/video/BV1W34y1U7AW?share_source=copy_we" /></div-->
+								
+								<iframe src="//player.bilibili.com/player.html?aid=805839794&bvid=BV1W34y1U7AW&cid=418712119&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="100%" > </iframe>
 								
 							</section>
 					</div>
