--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date">2021年10月31日</span>
+										<h2><a href="#">BenBenDiary<br />
+										2021年10月</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<!--a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a-->
+									<p>hloOsssO1dO1dOm9lO1gO1lOg7aO1gO1lOo2aO1edoOmmfOmmfOg6yOffaOfieO1edoOg7uOg6yOkf9Os6jOfeyOk6nOoq3Otw2OprmOnesO1edoOlkrOpipOpipOfeoOgkqOi6nOfzpOi7sO9heOmmfOmmfOff1Omk1OgrxO1edoOn4vOg6yOkf9OgrxOfieOg68OhkgOi7lOj1eOhl9OinnOtw9OfieO9heO1fO1eO1eO1cO2vO1edoO1hO1cO2rO31O9heOaO</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="page20211031benbenriji.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
