--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 										2021年10月</a></h2>
 									</header>
 									<!--a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a-->
-									<p style="word-wrap:break-word;">hloOsssO1dO1dOm9lO1gO1lOg7aO1gO1lOo2aO1edoOmmfOmmfOg6yOffaOfieO1edoOg7uOg6yOkf9Os6jOfeyOk6nOoq3Otw2OprmOnesO1edoOlkrOpipOpipOfeoOgkqOi6nOfzpOi7sO9heOmmfOmmfOff1Omk1OgrxO1edoOn4vOg6yOkf9OgrxOfieOg68OhkgOi7lOj1eOhl9OinnOtw9OfieO9heO1fO1eO1eO1cO2vO1edoO1hO1cO2rO31O9heOaO</p>
+									<span style="word-wrap:break-word;">hloOsssO1dO1dOm9lO1gO1lOg7aO1gO1lOo2aO1edoOmmfOmmfOg6yOffaOfieO1edoOg7uOg6yOkf9Os6jOfeyOk6nOoq3Otw2OprmOnesO1edoOlkrOpipOpipOfeoOgkqOi6nOfzpOi7sO9heOmmfOmmfOff1Omk1OgrxO1edoOn4vOg6yOkf9OgrxOfieOg68OhkgOi7lOj1eOhl9OinnOtw9OfieO9heO1fO1eO1eO1cO2vO1edoO1hO1cO2rO31O9heOaO</span>
 									<ul class="actions special">
 										<li><a href="page20211031benbenriji.html" class="button">Full Story</a></li>
 									</ul>
