--- a/nas/index.html
+++ b/nas/index.html
@@ -74,7 +74,7 @@
                 cc=0;
                 htmlDiv=document.getElementById("itemTemp");//目标div
                 htmlTemp=htmlDiv.innerHTML;//链接模块html模板
-                alert(htmlTemp);
+                //alert(htmlTemp);
                 for(var i=0;i<arr.length;i++)
                 {
                     var str=htmlTemp;
@@ -99,7 +99,7 @@
             <a class="itemTemp"  href="#链接#">
                 <div id="template" class="urlItem" style="background-color:#颜色#;" >
                     <img class="iconImg" src="#图标#" alt="" onerror="this.style.display='none'" />
-                    <span><big><big><b>#标题#</b></big></big></span><br />
+                    <span><big><big><big><b>#标题#</b></big></big></big></span><br />
                     <span class="urlitempolt">#介绍#</span>
                 </div>
             </a>
