--- a/nas/index.html
+++ b/nas/index.html
@@ -9,7 +9,7 @@
             font-family:inherit,"Droid Sans","微软雅黑", serif;
         }
         body{
-            background-color:#cacaca;
+            background-color:#c3c3c3;
             text-align: center;
             vertical-align: top;
         }
@@ -56,7 +56,8 @@
         <script>
             mainurl="http://192.168.193.27:"
             //HEX: #e4d1d1 #b9b0b0 #d9ecd0 #77a8a8 #f0efef #ddeedd #c2d4dd #b0aac0
-            colorbox=["#f5cec7","#e79796","#ffc988","#ff8284","#c6c09c"];
+            //colorbox=["#f5cec7","#e79796","#ffc988","#ff8284","#c6c09c"];
+            colorbox=["#eeeeee"];
             arr=[
                 //["0网址","1标题","2简介","颜色","4图标url（可选）"],
                 [mainurl+"8096","Jellyfin影音中心","家庭影院和IPVT","#6b5b95","icon/Jellyfin_A.png"],
@@ -93,7 +94,7 @@
     <body onLoad="init()">
         <div class="urlItem" style="background-color:#d9d9c2;text-align: center;vertical-align: center;">
             <span style="font-size:40px; color:rgb(172, 125, 49)">Hotine远程NAS</span><br />
-            <span class="urlitempolt">自家NAS公网使用</span>
+            <span class="urlitempolt">自家NAS公网使用。</span><span>家庭使用<a href="http://192.168.31.74:8080"><b>点此处</b>...</a></span>
         </div>
         <!---模板片段开始-->
         <div id ="itemTemp" >
