--- a/nas/index.html
+++ b/nas/index.html
@@ -6,7 +6,7 @@
         <title>HOTINE的NAS（公网版）</title>
         <style type="text/css">
         *{
-            font-family:inherit,"Droid Sans","微软雅黑", serif;
+            font-family:"微软雅黑";
         }
         body{
             background-color:#c3c3c3;
@@ -92,8 +92,8 @@
         </script>
     </head>
     <body onLoad="init()">
-        <div class="urlItem" style="background-color:#d9d9c2;text-align: center;vertical-align: center;">
-            <span style="font-size:40px; color:rgb(172, 125, 49)">Hotine远程NAS</span><br />
+        <div class="urlItem" style="background-color:rgb(199, 160, 99);text-align: center;vertical-align: center;">
+            <span style="font-size:40px; color:rgb(255, 255, 255)">Hotine远程NAS</span><br />
             <span class="urlitempolt">自家NAS公网使用。</span><span>家庭使用<a href="http://192.168.31.74:8080"><b>点此处</b>...</a></span>
         </div>
         <!---模板片段开始-->
@@ -107,8 +107,8 @@
             </a>
         </div>
         <!---模板片段结束-->
-        <div class="urlItem" style="text-align: center;vertical-align: center;background-color: #e0e2e4;">
-            <span style="font-size:40px; color:rgb(79, 100, 106)">没有啦...</span>
+        <div class="urlItem" style="text-align: center;vertical-align: center;background-color: #dcdcdc;">
+            <span style="font-size:40px; color:rgb(113, 113, 113)">没有啦...</span>
             
         </div>
     </body>
