--- a/nas/index.html
+++ b/nas/index.html
@@ -6,7 +6,7 @@
         <title>HOTINE的NAS（公网版）</title>
         <style type="text/css">
         *{
-            font-family:"微软雅黑";
+            /**font-family:"微软雅黑";*/
         }
         body{
             background-color:#c3c3c3;
