--- a/nas/index.html
+++ b/nas/index.html
@@ -67,6 +67,7 @@
                 [mainurl+"2038","文件管理器","FileBrowser","#cab577","icon/FileBrowser.png"],
                 [mainurl+"9000","Docker","Docker管理中心","#87bdd8","icon/Docker.png"],
                 [mainurl,"OMV管理","OpenMediaVault后台管理","#cfe0e8","icon/HA_A.png"],
+                [mainurl+"5032","WebHSS","SHH控制台","#cfe0e8","icon/SSH.png"],
             ]
             htmlTemp='';
             function init()
