--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hotine.Wang<br />
-									的 小站</h1>
+									的&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;小站</h1>
 									<p>这里是<strong>Hotine.Wang的小站</strong>,什么乱七八糟的东西都有...<br />
-										自用的小工具、笔记、博客等
+										自用的小工具、画集、笔记、博客等
 									</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
-									<img src="images/pic01.jpg" alt="" />
+									<img src="images/title-pic.jpg" alt="" />
 								</div>
 							</section>
 
@@ -44,7 +44,7 @@
 									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
-									<img src="images/pic02.jpg" alt="" />
+									<img src="images/pic02_cover.jpg" alt="" />
 								</div>
 							</section>
 
