--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<script language="javascript" type="text/javascript">
         //在这里进行网页跳转控制
-		var links=[
+		/*var links=[
 			["ai.hotine.wang","vps.hotine.wang:3002"],
 			["blog.hotine.wang","hotine.wang/blog"],
 			["nas.hotine.wang","hotine.wang/nas"],
@@ -31,7 +31,7 @@
 				window.location.host=links[i][1];
 			}
 			
-		}
+		}*/
     </script>
 	<body class="is-preload">
 
