--- a/_index.html
+++ b/_index.html
@@ -6,25 +6,25 @@
     </head>
     <script language="javascript" type="text/javascript">
         var links=[
-			["ai.hotine.wang","vps.hotine.wang:3002"],
-			["blog.hotine.wang","hotine.wang/blog"],
-			["nas.hotine.wang","hotine.wang/nas"],
-			["movie.hotine.wang","vps.hotine.wang/dybb/"],
+			["ai.hotine.wang","http://vps.hotine.wang:3002"],
+			["blog.hotine.wang","https://hotine.wang/blog"],
+			["nas.hotine.wang","https://hotine.wang/nas"],
+			["movie.hotine.wang","http://vps.hotine.wang/dybb/"],
 			//在这里添加更多...
 			["-","-"]
 		];
 		var host=window.location.host;
-        var host_to="hotine.wang";
+        var re_herf="https://hotine.wang";
 		for(i=0;i<links.length;i++)
 		{
 			if(links[i][0]==host)
 			{
-				host_to=links[i][1];
+                re_herf=links[i][1];
                 break;
 			}
-			
 		}
-        window.location.host=host_to;
+        
+        window.location.href=re_herf;
     </script>
     <body >
         跳转中，请稍后...<br />
