--- a/_index.html
+++ b/_index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>HotineStudio</title>
+        <title>HS空间站</title>
     </head>
     <script language="javascript" type="text/javascript">
         var links=[
@@ -27,7 +27,9 @@
         window.location.href=re_herf;
     </script>
     <body >
-        跳转中，请稍后...<br />
-        手动跳转点<a href="http://hotine.wang" >此处</a>
+        <div style="color:green;margin: 0 auto;width:300px;text-align: center;">
+            <br /><br />跳转中，请稍后...<br />
+        </div>
+        
     </body>
 </html>
