--- a/nas/index.html
+++ b/nas/index.html
@@ -61,9 +61,10 @@
             arr=[
                 //["0网址","1标题","2简介","颜色","4图标url（可选）"],
                 [mainurl+"8096","Jellyfin影音中心","家庭影院和IPVT","#6b5b95","icon/Jellyfin_A.png"],
-                ["https://hotine.wang/dybb/","电影伴伴","最新电影下载清单","#b2ad7f","icon/Chrome.png"],
+                ["http://vps.hotine.wang/dybb/","电影伴伴","最新电影下载清单","#b2ad7f","icon/Chrome.png"],
+                ["https://www.yuantoujiu.cn/","4K电影","4K电影下载查询","#b2ad7f","icon/Chrome.png"],
                 [mainurl+"2345","远程迅雷","迅雷网页版","#80ced6","icon/Xunlei_A.png"],
-                [mainurl+"9091","Transmission","BT离线下载","#cfe0e8","icon/transmission.svg"],
+                [mainurl+"9088","qBittorrent","BT离线下载","#cfe0e8","icon/qbittorrent-tray.svg"],
                 [mainurl+"6080","百度云盘","百度云盘网页版","#92a8d1","icon/BaiduNetdisk.png"],
                 [mainurl+"5700","青龙面板","定时任务处理","#92a8d1","icon/qinglong.svg"],
                 [mainurl+"2038","文件管理器","FileBrowser","#cab577","icon/FileBrowser.png"],
