--- a/_index.html
+++ b/_index.html
@@ -10,6 +10,9 @@
 			["blog.hotine.wang","https://hotine.wang/blog"],
 			["nas.hotine.wang","https://hotine.wang/nas"],
 			["movie.hotine.wang","http://vps.hotine.wang/dybb/"],
+            ["tv.hotine.wang","http://vps.hotine.wang:8089"],
+            ["pan.hotine.wang","http://vps.hotine.wang:5244"],
+            ["mm.hotine.wang","https://hotine.wang/rabbit/index.html"],
 			//在这里添加更多...
 			["-","-"]
 		];
