--- a/vps用/index.html
+++ b/vps用/index.html
@@ -14,6 +14,7 @@
             ["pan.hotine.wang","http://vps.hotine.wang:5244"],
             ["mm.hotine.wang","https://hotine.wang/rabbit/index.html"],
             ["zhl.hotine.wang","https://hotine.wang/r/index.html"],
+            ["qr.hotine.wang","https://hotine.wang/r/index.html"],
 			//在这里添加更多...
 			["-","-"]
 		];
