修复了电影伴伴的链接

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<section class="panel spotlight small left" >
 							<div class="content span-9">
 								<h2 class="major">新片速递</h2>
-								<p><a href="dybb/index.html" >自己写的爬虫程序，只为不看广告:)<br />每10分钟更新一次数据，无广告。数据全部来自于其他网站，仅供自己使用！<br /><b>点此进入>>></b></a></p>
+								<p><a href="http://movie.hotine.wang" >自己写的爬虫程序，只为不看广告:)<br />每10分钟更新一次数据，无广告。数据全部来自于其他网站，仅供自己使用！<br /><b>点此进入>>></b></a></p>
 							</div>
 							<div class="image filtered tinted" data-position="top left">
 								<img src="images/dybb.jpg" alt="" />
