--- a/vps用/index.html
+++ b/vps用/index.html
@@ -2,24 +2,21 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>HS空间站</title>
+        <title>HOTINE SPACE</title>
     </head>
     <script language="javascript" type="text/javascript">
         var links=[
-			["ai.hotine.wang","http://vps.hotine.wang:3002"],
-			["blog.hotine.wang","https://hotine.wang/blog"],
-			["nas.hotine.wang","https://hotine.wang/nas"],
-			["movie.hotine.wang","http://vps.hotine.wang/dybb/"],
-            ["tv.hotine.wang","http://vps.hotine.wang:8089"],
-            ["pan.hotine.wang","http://vps.hotine.wang:5244"],
-            ["mm.hotine.wang","https://hotine.wang/rabbit/index.html"],
-            ["zhl.hotine.wang","https://hotine.wang/r/index.html"],
-            ["qr.hotine.wang","https://hotine.wang/r/index.html"],
-			//在这里添加更多...
+			["nas.hotine.wang","https://blog.hotine.wang/nas"],
+			["movie.hotine.wang","http://hotine.wang/dybb/"],
+            ["pan.hotine.wang","http://hotine.wang:5244"],
+            ["mm.hotine.wang","https://blog.hotine.wang/rabbit/index.html"],
+            ["zhl.hotine.wang","https://blog.hotine.wang/r/index.html"],
+            ["qr.hotine.wang","https://blog.hotine.wang/r/index.html"],
+			//add more...
 			["-","-"]
 		];
 		var host=window.location.host;
-        var re_herf="https://hotine.wang";
+        var re_herf="https://blog.hotine.wang";
 		for(i=0;i<links.length;i++)
 		{
 			if(links[i][0]==host)
@@ -33,7 +30,7 @@
     </script>
     <body >
         <div style="color:green;margin: 0 auto;width:300px;text-align: center;">
-            <br /><br />跳转中，请稍后...<br />
+            <br /><br />JUMPING ... WAIT ONE WAIT ...<br />
         </div>
         
     </body>
