--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
 									<li><a href="rabbit/index.html" target="_blank" >HOLE</a></li>
 								</ul>
 							</div>
+							<div class="inner ">
+								<ul >
+									<li><a href="https://chat-shared2.zhile.io/shared.html" target="_blank" >SharedChat</a></li>
+									<li><a href="https://ping.pe/" target="_blank" >ping...</a></li>
+									<li><a href="https://c.runoob.com/front-end/854/" target="_blank" >RegExp</a></li>
+								</ul>
+							</div>
 						</section>
 
 						
