--- a/vps用/index.html
+++ b/vps用/index.html
@@ -26,11 +26,11 @@
 			}
 		}
         
-        window.location.href=re_herf;
+        //window.location.href=re_herf;
     </script>
     <body >
-        <div style="color:green;margin: 0 auto;width:300px;text-align: center;">
-            <br /><br />JUMPING ... WAIT ONE WAIT ...<br />
+        <div style="color:rgb(19, 20, 19);margin: 0 auto;width:300px;text-align: center;font-size: 100pt;">
+            WHY R U HERE ?
         </div>
         
     </body>
