--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 									<li><a href="https://chat-shared2.zhile.io/shared.html" target="_blank" >SharedChat</a></li>
 									<li><a href="https://ping.pe/" target="_blank" >ping...</a></li>
 									<li><a href="https://c.runoob.com/front-end/854/" target="_blank" >RegExp</a></li>
+									<li><a href="https://www.pexels.com/zh-cn/videos/" target="_blank" >视频素材库</a></li>
 								</ul>
 							</div>
 						</section>
