--- a/vps用/index.html
+++ b/vps用/index.html
@@ -44,7 +44,7 @@
 <body>
     <div id="video-container">
         <video id="video-background" autoplay muted loop>
-            <source src="background-video.mp4" type="video/mp4">
+            <source src="background-video2.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
@@ -52,5 +52,12 @@
         <h1 style="font-size: 64px;">WHY R U HERE ?</h1>
         <p style="font-size: 16px;">This is not where you should be...</p>
     </div>
+    <script>
+        var sub=["b","l","o","g"];
+        var weburl="hotine.wang"
+        setTimeout(function() {
+            window.location.href = 'https:'+'//'+sub[0]+sub[1]+sub[2]+sub[3]+'.'+weburl;
+        }, 20000); // 10000毫秒等于10秒
+    </script>
 </body>
 </html>
