--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 						<section class="panel spotlight medium left" id="first">
 							<div class="content span-9">
 								<h2 class="major">my Blog</h2>
-								<p><a href="blog/index.html" >随手记，全在这了...<br />游记、绘画、IT折腾，<b>点此进入>>></b></a></p>
+								<p><a href="https://blog.hotine.wang" >随手记，全在这了...<br />游记、绘画、IT折腾，<b>点此进入>>></b></a></p>
 							</div>
 							<div class="image filtered tinted" data-position="top left">
-								<img src="blog/images/20210917tsingtao/27.jpg" alt="" />
+								<img src="images/pic04.jpg" alt="" />
 							</div>
 						</section>
 						
