--- a/nas/index.html
+++ b/nas/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-        <title>HOTINE的NAS（公网版）</title>
+        <title>HOTINE的NAS（虚拟局域网版）</title>
         <style type="text/css">
         *{
             /**font-family:"微软雅黑";*/
@@ -54,7 +54,7 @@
             }
         </style>
         <script>
-            mainurl="http://192.168.193.27:"
+            mainurl="http://192.168.193.1:"
             //HEX: #e4d1d1 #b9b0b0 #d9ecd0 #77a8a8 #f0efef #ddeedd #c2d4dd #b0aac0
             //colorbox=["#f5cec7","#e79796","#ffc988","#ff8284","#c6c09c"];
             colorbox=["#eeeeee"];
@@ -63,15 +63,15 @@
                 [mainurl+"8096","Jellyfin影音中心","家庭影院和IPVT","#6b5b95","icon/Jellyfin_A.png"],
                 [mainurl+"8063","MT相册","MT相册","#6b5b95","icon/mtphotos.png"],
                 ["http://vps.hotine.wang/dybb/","电影伴伴","最新电影下载清单","#b2ad7f","icon/Chrome.png"],
-                ["https://www.yuantoujiu.cn/","4K电影","4K电影下载查询","#b2ad7f","icon/Chrome.png"],
                 [mainurl+"2345","远程迅雷","迅雷网页版","#80ced6","icon/Xunlei_A.png"],
                 [mainurl+"8088","qBittorrent","BT离线下载","#cfe0e8","icon/qbittorrent-tray.svg"],
                 [mainurl+"6080","百度云盘","百度云盘网页版","#92a8d1","icon/BaiduNetdisk.png"],
                 [mainurl+"5700","青龙面板","定时任务处理","#92a8d1","icon/qinglong.svg"],
                 [mainurl+"2038","文件管理器","FileBrowser","#cab577","icon/FileBrowser.png"],
-                [mainurl+"9000","Docker","Docker管理中心","#87bdd8","icon/Docker.png"],
+                [mainurl+"8384","文件同步","Syncthing","#cab577","icon/syncthing.svg"],
+                [mainurl+"9000","Portainer","Portainer管理中心","#87bdd8","icon/Docker.png"],
                 [mainurl,"OMV管理","OpenMediaVault后台管理","#cfe0e8","icon/HA_A.png"],
-                [mainurl+"5032","WebHSS","SHH控制台","#cfe0e8","icon/SSH.png"],
+                [mainurl+"80","192.168.193.1","...","#cfe0e8","#"],
             ]
             htmlTemp='';
             function init()
