--- a/nas/index.html
+++ b/nas/index.html
@@ -60,7 +60,7 @@
             colorbox=["#eeeeee"];
             arr=[
                 //["0网址","1标题","2简介","颜色","4图标url（可选）"],
-                [mainurl+"8096","Jellyfin影音中心","家庭影院和IPVT","#6b5b95","icon/Jellyfin_A.png"],
+                [mainurl+"8096","影音中心","家庭影院","#6b5b95","icon/Jellyfin_A.png"],
                 [mainurl+"8063","MT相册","MT相册","#6b5b95","icon/mtphotos.png"],
                 ["http://vps.hotine.wang/dybb/","电影伴伴","最新电影下载清单","#b2ad7f","icon/Chrome.png"],
                 [mainurl+"2345","远程迅雷","迅雷网页版","#80ced6","icon/Xunlei_A.png"],
