--- a/nas/index.html
+++ b/nas/index.html
@@ -60,18 +60,18 @@
             colorbox=["#eeeeee"];
             arr=[
                 //["0网址","1标题","2简介","颜色","4图标url（可选）"],
-                [mainurl+"8096","影音中心","家庭影院","#6b5b95","icon/Jellyfin_A.png"],
-                [mainurl+"8063","MT相册","MT相册","#6b5b95","icon/mtphotos.png"],
+                [mainurl+"8096","影音中心","家庭影院8096","#6b5b95","icon/Jellyfin_A.png"],
+                [mainurl+"8063","MT相册","MT相册8063","#6b5b95","icon/mtphotos.png"],
+                [mainurl+"5800","火狐浏览器","火狐浏览器5800","#6b5b95","icon/Chrome.png"],
                 ["http://x.hotine.wang/","电影伴伴","最新电影下载清单","#b2ad7f","icon/Chrome.png"],
-                [mainurl+"2345","远程迅雷","迅雷网页版","#80ced6","icon/Xunlei_A.png"],
-                [mainurl+"8088","qBittorrent","BT离线下载","#cfe0e8","icon/qbittorrent-tray.svg"],
-                [mainurl+"15811","百度云盘","百度云盘网页版","#92a8d1","icon/BaiduNetdisk.png"],
-                [mainurl+"5700","青龙面板","定时任务处理","#92a8d1","icon/qinglong.svg"],
-                [mainurl+"2038","文件管理器","FileBrowser","#cab577","icon/FileBrowser.png"],
-                [mainurl+"8384","文件同步","Syncthing","#cab577","icon/syncthing.svg"],
-                [mainurl+"9000","Portainer","Portainer管理中心","#87bdd8","icon/Docker.png"],
-                [mainurl,"OMV管理","OpenMediaVault后台管理","#cfe0e8","icon/HA_A.png"],
-                [mainurl+"80","192.168.193.1","...","#cfe0e8","#"],
+                [mainurl+"2345","迅雷","迅雷网页版2345","#80ced6","icon/Xunlei_A.png"],
+                [mainurl+"8088","qBittorrent","BT下载8088","#cfe0e8","icon/qbittorrent-tray.svg"],
+                [mainurl+"15811","百度云盘","百度云盘15811","#92a8d1","icon/BaiduNetdisk.png"],
+                [mainurl+"5700","青龙面板","定时任务处理5700","#92a8d1","icon/qinglong.svg"],
+                [mainurl+"2038","文件管理器2038","FileBrowser","#cab577","icon/FileBrowser.png"],
+                [mainurl+"8384","文件同步8384","Syncthing","#cab577","icon/syncthing.svg"],
+                [mainurl+"9000","Portainer","Portainer管理中心9000","#87bdd8","icon/Docker.png"],
+                [mainurl,"OMV管理","OpenMediaVault后台管理","#cfe0e8","icon/HA_A.png"]
             ]
             htmlTemp='';
             function init()
@@ -114,7 +114,7 @@
         <!---模板片段结束-->
         <div class="urlItem" style="text-align: center;vertical-align: center;background-color: #dcdcdc;">
             <span style="font-size:40px; color:rgb(113, 113, 113)">没有啦...</span>
-            
+            <span class="urlitempolt">192.168.193.1</span>
         </div>
     </body>
 </html>
