--- a/nas/index.html
+++ b/nas/index.html
@@ -68,8 +68,8 @@
                 [mainurl+"8088","qBittorrent","BT下载8088","#cfe0e8","icon/qbittorrent-tray.svg"],
                 [mainurl+"15811","百度云盘","百度云盘15811","#92a8d1","icon/BaiduNetdisk.png"],
                 [mainurl+"5700","青龙面板","定时任务处理5700","#92a8d1","icon/qinglong.svg"],
-                [mainurl+"2038","文件管理器2038","FileBrowser","#cab577","icon/FileBrowser.png"],
-                [mainurl+"8384","文件同步8384","Syncthing","#cab577","icon/syncthing.svg"],
+                [mainurl+"2038","文件管理器","FileBrowser2038","#cab577","icon/FileBrowser.png"],
+                [mainurl+"8384","文件同步","Syncthing8384","#cab577","icon/syncthing.svg"],
                 [mainurl+"9000","Portainer","Portainer管理中心9000","#87bdd8","icon/Docker.png"],
                 [mainurl,"OMV管理","OpenMediaVault后台管理","#cfe0e8","icon/HA_A.png"]
             ]
